docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/divider.mdx
---
modificationDate: March 24, 2026
title: Divider
description: Jetpack Compose Divider components for creating visual separators.
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI provides [`HorizontalDivider`](<https://developer.android.com/reference/kotlin/androidx/compose/material3/package-summary#HorizontalDivider(androidx.compose.ui.Modifier,androidx.compose.ui.unit.Dp,androidx.compose.ui.graphics.Color)>) and [`VerticalDivider`](<https://developer.android.com/reference/kotlin/androidx/compose/material3/package-summary#VerticalDivider(androidx.compose.ui.Modifier,androidx.compose.ui.unit.Dp,androidx.compose.ui.graphics.Color)>) matching the official Jetpack Compose Divider API.

## Installation

<APIInstallSection />

## Usage

### Horizontal divider

A thin horizontal line to visually separate content in lists and layouts.

```tsx HorizontalDividerExample.tsx
import { Host, HorizontalDivider, Column, Text } from '@expo/ui/jetpack-compose';

export default function HorizontalDividerExample() {
  return (
    <Host matchContents>
      <Column>
        <Text>First section</Text>
        <HorizontalDivider />
        <Text>Second section</Text>
      </Column>
    </Host>
  );
}
```

### Custom thickness and color

Both `HorizontalDivider` and `VerticalDivider` accept `thickness` and `color` props. Use `StyleSheet.hairlineWidth` for a single-pixel line, or set a custom thickness and color.

```tsx CustomDividerExample.tsx
import { Host, HorizontalDivider, Column, Text } from '@expo/ui/jetpack-compose';
import { StyleSheet } from 'react-native';

export default function CustomDividerExample() {
  return (
    <Host matchContents>
      <Column>
        <Text>Hairline divider (1 pixel)</Text>
        <HorizontalDivider thickness={StyleSheet.hairlineWidth} />
        <Text>Thick colored divider</Text>
        <HorizontalDivider thickness={4} color="#E91E63" />
        <Text>Below</Text>
      </Column>
    </Host>
  );
}
```

### Vertical divider

A vertical line to separate items side by side in a row layout.

```tsx VerticalDividerExample.tsx
import { Host, VerticalDivider, Row, Text } from '@expo/ui/jetpack-compose';
import { height } from '@expo/ui/jetpack-compose/modifiers';

export default function VerticalDividerExample() {
  return (
    <Host matchContents>
      <Row verticalAlignment="center" modifiers={[height(48)]}>
        <Text>Left</Text>
        <VerticalDivider />
        <Text>Right</Text>
      </Row>
    </Host>
  );
}
```

## API

```tsx
import { HorizontalDivider, VerticalDivider } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/divider" apiName="Divider" />
